@@ -1,3 +1,12 @@
+2022-02-25  Per Arne Vollan  <pvollan@apple.com>
+
+        Remove unused soft linking declarations
+        https://bugs.webkit.org/show_bug.cgi?id=237209
+
+        Reviewed by Brent Fulgham.
+
+        * WebProcess/cocoa/WebProcessCocoa.mm:
+
 2022-02-25  Kimmo Kinnunen  <kkinnunen@apple.com>
 
         REGRESSION(r289580): [ iOS macOS ] TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory is a constant timeout
